--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         run: |
-          mvn --batch-mode --update-snapshots clean spring-boot:build-image -Dspring-boot.build-image.imageName=gcr.io/${{ env.PROJECT_ID }}/${{ env.DEPLOYMENT_NAME }}:latest
+          mvn --batch-mode --update-snapshots clean spring-boot:build-image k8s:resource -Dspring-boot.build-image.imageName=gcr.io/${{ env.PROJECT_ID }}/${{ env.DEPLOYMENT_NAME }}:latest
 
       - name: Login to GCP
         uses: google-github-actions/setup-gcloud@v0.6.0
