--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,12 +39,12 @@ jobs:
         run: |
           docker push ghcr.io/${{ github.repository_owner }}/${{ env.DEPLOYMENT_NAME }}
 
-      - uses: tale/kubectl-action@v1
-        with:
-          base64-kube-config: ${{ secrets.DEPLOYMENT_TOKEN }}
+      
 
       - name: Deploy
         run: |-
-          kubectl apply -f target/classes/META-INF/jkube/kubernetes.yml
-          kubectl rollout status deployment/${{ env.DEPLOYMENT_NAME }}
-          kubectl get services -o wide
+          echo "${{ secrets.DEPLOYMENT_TOKEN }}" > kubeconfig.yaml
+          kubectl --kubeconfig kubeconfig.yaml apply -f target/classes/META-INF/jkube/kubernetes.yml
+          kubectl --kubeconfig kubeconfig.yaml rollout status deployment/${{ env.DEPLOYMENT_NAME }}
+          kubectl --kubeconfig kubeconfig.yaml get services -o wide
+          rm kubeconfig.yaml
