--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,5 +46,5 @@ jobs:
           echo "${{ env.DEPLOYMENT_TOKEN }}" > kubeconfig.yaml
           kubectl --kubeconfig kubeconfig.yaml apply -f target/classes/META-INF/jkube/kubernetes.yml
           kubectl --kubeconfig kubeconfig.yaml rollout status deployment/${{ env.DEPLOYMENT_NAME }}
-          kubectl --kubeconfig kubeconfig.yaml get services -o wide
+          kubectl --kubeconfig kubeconfig.yaml --namespace techdays get services -o wide
           rm kubeconfig.yaml
