--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,6 +2,7 @@ on: [push]
 
 env:
   DEPLOYMENT_NAME: ${{ secrets.TEAMNAME }}
+  K8S_NAMESPACE: ${{ secrets.NAMESPACE }}
   DEPLOYMENT_PORT: ${{ secrets.PORT }}
   DEPLOYMENT_TOKEN: ${{ secrets.TOKEN }}
 
@@ -30,7 +31,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         run: |
-          mvn --batch-mode --update-snapshots clean spring-boot:build-image k8s:resource -Dspring-boot.build-image.imageName=ghcr.io/${{ github.repository_owner }}/${{ env.DEPLOYMENT_NAME }}:latest -Ddeployment.name=${{ env.DEPLOYMENT_NAME }} -Ddeployment.port=${{ env.DEPLOYMENT_PORT }}
+          mvn --batch-mode --update-snapshots clean spring-boot:build-image k8s:resource -Dspring-boot.build-image.imageName=ghcr.io/${{ github.repository_owner }}/${{ env.DEPLOYMENT_NAME }}:latest -Ddeployment.name=${{ env.DEPLOYMENT_NAME }} -Ddeployment.namespace=${{ env.K8S_NAMESPACE }} -Ddeployment.port=${{ env.DEPLOYMENT_PORT }}
 
       - name: Log in to registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
@@ -45,6 +46,6 @@ jobs:
         run: |-
           echo "${{ env.DEPLOYMENT_TOKEN }}" > kubeconfig.yaml
           kubectl --kubeconfig kubeconfig.yaml apply -f target/classes/META-INF/jkube/kubernetes.yml
-          kubectl --kubeconfig kubeconfig.yaml --namespace techdays rollout status deployment/${{ env.DEPLOYMENT_NAME }}
-          kubectl --kubeconfig kubeconfig.yaml --namespace techdays get services -o wide
+          kubectl --kubeconfig kubeconfig.yaml --namespace ${{ env.K8S_NAMESPACE }} rollout status deployment/${{ env.DEPLOYMENT_NAME }}
+          kubectl --kubeconfig kubeconfig.yaml --namespace ${{ env.K8S_NAMESPACE }} get services -o wide
           rm kubeconfig.yaml
