--- a/pom.xml
+++ b/pom.xml
@@ -105,8 +105,8 @@
 						<namespace>${deployment.namespace}</namespace>
 						<services>
 							<service>
-								<name>${deployment.name}</name>
-								<type>LoadBalancer</type>
+								<name>${deployment.name}-service</name>
+								<type>ClusterIP</type>
 								<ports>
 									<port>
 										<port>80</port>
