--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,8 +6,8 @@ on:
 
 env:
   DEPLOYMENT_NAME: ${{ vars.TEAMNAME }}
-  K8S_NAMESPACE: ${{ vars.NAMESPACE }}
   DEPLOYMENT_TOKEN: ${{ secrets.TOKEN }}
+  NAMESPACE: ${{ vars.NAMESPACE }}
 
 jobs:
   build:
@@ -40,22 +40,43 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
         run: |
-          mvn --batch-mode --update-snapshots clean spring-boot:build-image k8s:resource -Dspring-boot.build-image.imageName=ghcr.io/${{ env.IMAGE_REPOSITORY }}:latest -Ddeployment.name=${{ env.DEPLOYMENT_NAME }} -Ddeployment.namespace=${{ env.K8S_NAMESPACE }}
+          mvn --batch-mode --update-snapshots clean spring-boot:build-image \
+          -Dspring-boot.build-image.imageName=ghcr.io/${{ env.IMAGE_REPOSITORY }}:latest
 
       - name: Log in to registry
+        if: github.ref == 'refs/heads/main'
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
       - name: Push the Docker image to GHCR
+        if: github.ref == 'refs/heads/main'
         run: |
           docker push ghcr.io/${{ env.IMAGE_REPOSITORY }}
 
-      
 
-      - name: Deploy
+      - name: Install Helm
         if: github.ref == 'refs/heads/main'
-        run: |-
+        uses: azure/setup-helm@v3
+        with:
+          version: 'latest' # default is latest (stable)
+          token: ${{ secrets.GITHUB_TOKEN }} # only needed if version is 'latest'
+        id: install
+
+      - name: Deploy Helm chart
+        if: github.ref == 'refs/heads/main'
+        run: |
           echo "${{ env.DEPLOYMENT_TOKEN }}" > kubeconfig.yaml
-          kubectl --kubeconfig kubeconfig.yaml apply -f target/classes/META-INF/jkube/kubernetes.yml --validate=false
-          kubectl --kubeconfig kubeconfig.yaml --namespace ${{ env.K8S_NAMESPACE }} rollout status deployment/${{ env.DEPLOYMENT_NAME }}
-          kubectl --kubeconfig kubeconfig.yaml --namespace ${{ env.K8S_NAMESPACE }} get services -o wide
+
+          helm upgrade --install \
+          ${{ env.DEPLOYMENT_NAME }} \
+          charts/player \
+          --set "ingress.hosts[0].host=${{ env.DEPLOYMENT_NAME }}.play.continuouspoker.org" \
+          --set "ingress.hosts[0].paths[0].path=/" \
+          --set "ingress.tls[0].hosts[0]=${{ env.DEPLOYMENT_NAME }}.play.continuouspoker.org" \
+          --set "ingress.tls[0].secretName=letsencrypt-nginx-private-key" \
+          --set "ingress.hosts[0].paths[0].pathType=ImplementationSpecific" \
+          --set "image.repository=ghcr.io/${{ env.IMAGE_REPOSITORY }}" \
+          --namespace ${{ env.NAMESPACE }} \
+          --kubeconfig kubeconfig.yaml \
+          --force
+
           rm kubeconfig.yaml
