Force pod restart on Helm upgrade

--- a/charts/player/templates/deployment.yaml
+++ b/charts/player/templates/deployment.yaml
@@ -15,6 +15,7 @@ spec:
     metadata:
       {{- with .Values.podAnnotations }}
       annotations:
+        timestamp: {{ now | quote }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
